Bug 522787. Always register an editor observer. r=smaug